# FDMT

./: LICENSE  README.md  cpuFDMT.py  gpuFDMT.py  requirements-cmdline.txt  requirements.txt  setup.cfg  setup.py
fdmt/: cpuFDMT.py  cpu_fdmt.py  run.py
