[metadata]
name = FDMT 
version = 0.1
description = CHIME/SPS FDMT code
long_description = file: README.md, LICENSE
author = 
author_email = 
maintainer = 
maintainer_email = 
url = https://github.com/chime-sps/FDMT
project_urls =
    Source=https://github.com/chime-sps/FDMT
    Tracker=https://github.com/chime-sps/FDMT/issues
license = MIT
license_file = LICENSE
platforms = any

[options]
zip_safe = True
packages = find:
scripts = 
python_requires = !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, >=3.6
install_requires =
    numpy

[options.extras_require]
cmdline = blimpy

[bdist_wheel]
universal = true
